--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 300px;
+  width: 90%;
   margin: 10px auto;
 }
 input {
@@ -86,10 +86,18 @@ input:focus {
 
 .answer {
   height: 30px;
-  width: 100%;
+  width: 150px;
   margin: 10px;
   display: flex;
   justify-content: space-evenly;
+  div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    h2 {
+      font-size: 1em;
+    }
+  }
   input {
     color: black;
     border-radius: 5px;
