--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ input:focus {
 }
 
 .question h2 {
+  transition: all 0.9s ease;
   display: flex;
   justify-content: space-around;
 }
@@ -99,16 +100,17 @@ input:focus {
   align-items: end;
   border-bottom: 1px solid white;
   position: relative;
-  &::after {
+  &.sum::after {
     content: "+";
+  }
+  &.sub::after {
+    content: "-";
+  }
+  &::after {
     position: absolute;
     bottom: 0;
     left: -0.5em;
   }
-}
-
-.not-start-yet {
-  visibility: hidden;
 }
 
 .answer {
@@ -160,11 +162,13 @@ button {
   padding: 8px 10px;
   text-align: center;
   cursor: pointer;
+  font-size: 0.6em;
   &.submit {
-    font-size: 0.6em;
+    color: #7a49bb;
     font-weight: bolder;
     border-radius: 2em;
     padding: 0.9em;
+    border: 0.5px solid #7a49bb;
   }
   &.starto-btn {
     font-size: 0.9em;
@@ -207,7 +211,6 @@ button {
 }
 
 div.footer-icons {
-  /* background-color: #f0f0f0; */
   position: absolute;
   height: 40px;
   width: 100px;
@@ -222,4 +225,38 @@ div.footer-icons {
     text-decoration: none;
     color: white;
   }
+}
+
+.dialog-option {
+  position: fixed;
+  top: 47%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  border: none;
+  border-radius: 10px;
+  padding: 30px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.514);
+  text-align: center;
+  font-family: "Comic Sans MS", cursive;
+  width: 270px;
+}
+
+.dialog-option h2 {
+  font-size: 1.05em;
+  margin-bottom: 20px;
+  color: #2c1bc5e5;
+}
+
+button.option-btn {
+  background-color: #2c1bc5e5;
+  width: 150px;
+  font-size: 0.7em;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  margin: 6px auto;
+  transition: background-color 0.3s ease; /* Efek transisi warna */
+  outline: none;
 }
