--- a/style.css
+++ b/style.css
@@ -249,7 +249,7 @@ dialog {
   top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: #ffffff;
+  background-color: rgb(241, 241, 241);
   border: none;
   border-radius: 10px;
   padding: 20px;
@@ -284,20 +284,31 @@ button.option-btn {
 
 .tooltip {
   position: relative;
+  animation: naikTurun 1.5s infinite;
 }
 
 .tooltip::after {
-  content: "Klik di bawah untuk cara mainnya";
+  content: attr(tooltip-text);
   position: absolute;
-  top: -60px;
-  left: -120%;
-  background-color: #33333385;
-  width: 60px;
+  top: -20px;
+  left: -70%;
+  width: 50px;
   font-size: 0.55em;
-  color: #e9e9e9;
-  padding: 7px;
+  color: #1d1c1c;
   border-radius: 5px;
   transition: opacity 0.3s;
+}
+
+@keyframes naikTurun {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 
 .dialog-info {
@@ -310,15 +321,16 @@ button.option-btn {
 
 .content-info {
   box-sizing: border-box;
-  padding: 10px;
+  padding: 10px 17px;
   height: 99%;
   width: 100%;
   overflow: auto;
   text-align: left;
-  p {
-    font-weight: 100;
-    font-size: 0.8em;
-  }
+}
+
+.content-info p {
+  font-weight: 100;
+  font-size: 0.8em;
 }
 
 .fa-circle-xmark {
@@ -344,4 +356,16 @@ button.option-btn {
 
 ::-webkit-scrollbar-thumb:active {
   background: #bdbdbd;
+}
+
+.dialog-info img,
+video {
+  border-radius: 7px;
+  display: block;
+  width: 200px;
+  margin: 5px auto;
+}
+
+video {
+  width: 220px;
 }
